# cicadas

./: README.md
celebs/: CHANGELOG.md  celebs.cabal
celebs/src/: Celebs.hs
emp/: CHANGELOG.md  README.md  emptrigger.cabal
emp/app/: Main.hs
emp/examples/: Examples.hs
emp/internal/: EMPTriggerInternal.hs
emp/src/: EMPTrigger.hs
emp/test/: Main.hs
findcycle/: CHANGELOG.md  LICENSE  findcycle.cabal
findcycle/src/: FindCycle.hs
majority/: CHANGELOG.md  find_majority  majority.cabal  majority.nb
majority/src/: Majority.hs
mastermind/: CHANGELOG.md  mastermind.cabal
mastermind/src/: Mastermind.hs
safety/: CHANGELOG.md  safety.cabal
safety/src/: Safety.hs
